SPawn e Kill di nodi OK TODO: Graceful Update procedure